--- a/Thesis/Thesis.tex
+++ b/Thesis/Thesis.tex
@@ -230,7 +230,7 @@ We will not worry about the concerns raised, because a single formal world is st
 
 In this section we describe the basic principles on which Coq is founded. Coq is based on a formal system called Calculus of Constructions (CoC)\cite{CoC}, which later evolved into the Calculus of Inductive Constructions (CIC) \cite{CIC} and finally into Predicative Calculus of Cumulative Inductive Constructions (pCuIC) \cite{pCuIC}.
 
-To avoid drowning in minute details, we instead describe Martin-L\"{o}f Type Theory (MLTT) \cite{MLTT1} \cite{MLTT2}, a closely related system which from now on we will call simply ``type theory''. In the \hyperref[coq]{next section}, where we introduce Coq, we will point out the relevant differences from type theory as we go. The material presented in this section is standard, but in the light of \hyperref[formal]{previous section's} closing paragraphs we encourage people familiar with type theory to read it as a description not of a formal system, but of a model of computation.
+To avoid drowning in minute details, we instead describe Martin-L\"{o}f Type Theory (MLTT) \cite{MLTT1} \cite{MLTT2}, a closely related system which from now on we will call simply ``type theory''. In the \hyperref[coq]{next section}, where we introduce Coq, we will point out the relevant differences from type theory as we go. Our account is based mostly on Appendix A from \cite{HoTTBook} and sections 2.3 and 2.5 from \cite{Overlapping}. The material presented in here is standard, but in the light of \hyperref[formal]{previous section's} closing paragraphs we encourage people familiar with type theory to read it as a description not of a formal system, but of a model of computation.
 
 As a model of computation, type theory is a bit unusual, because the most important things it is concerned with are not programs or computations -- as the name suggests, its basic objects of interest are types. We can think of types as specifications that prescribe what is to be computed. Only after we have a type, can we talk about the terms of that type, which are the formal counterparts of the informal notion of program/algorithm. This means that every program comes equipped with a specification which tells us what it computes.
 
@@ -240,19 +240,21 @@ The notions of type and term are not absolute. Sometimes we can assert that $A$ 
 
 We keep track of assumptions using contexts. When a context $\Gamma$ appears to the left of $\vdash$ in a judgement, it means that this judgement is made under assumptions from $\Gamma$. Such a judgement is called a hypothetical judgement. So, in their full generality, type formation and typing judgements are hypothetical judgements. The type formation judgement is written $\type{\Gamma}{A}$ and read ``in context $\Gamma$, $A$ is a type'', whereas the typing judgement is written $\term{\Gamma}{t}{A}$ and read ``in context $\Gamma$, $t$ is of type $A$''. What is and what is not a context is governed by a third kind of judgement, the well-formed context judgement, which is written $\context{\Gamma}$ and read ``$\Gamma$ is a well-formed context''. This kind of judgement is absolute and can not depend on any assumptions.
 
-It is important to reiterate that not all judgements are derivable. For example, the judgement $\term{}{5}{\N \to \N}$ asserts that five is a function from natural numbers to natural numbers, but this is clearly nonsense. To know which judgements are derivable (and which are not), we need inference rules. An inference rule in general has the form ``if we can derive the judgements $J_1$, \dots, $J_n$, then we can derive the judgement $J$''. In most texts, inference rules are written with a horizontal line notation, with premises above the line and the conclusion below it, but we will state them inline, using ordinary sentences. An important special case are inference rules with no premises, i.e. of the form ``the judgement $J$ is derivable''. Such a rule declares that the judgement $J$ holds unconditionally. For rules with no premises, we will identify the whole rule with the judgement $J$.
+It is important to reiterate that not all judgements are derivable. For example, the judgement $\term{}{5}{\N \to \N}$ asserts that five is a function from natural numbers to natural numbers, but this is clearly nonsense. To know which judgements are derivable (and which are not), we need inference rules. An inference rule in general has the form ``if we can derive the judgements $J_1$, \dots, $J_n$, then we can derive the judgement $J$''. An important special case are inference rules with no premises, i.e. of the form ``the judgement $J$ is derivable''. Such a rule declares that the judgement $J$ holds unconditionally. For rules with no premises, we will identify the whole rule with the judgement $J$. In most texts, inference rules are written with a horizontal line notation, with premises (if any) above the line and the conclusion below it, but in the following paragraphs we will state them inline, sometimes symbolically and sometimes using ordinary sentences.
 
-A particular flavor of type theory (in our case, MLTT) is defined by specifying the rules for deriving its judgements.
+% A particular flavor of type theory is defined by specifying what judgements it has and what are the inference rules for deriving them. The rules can be roughly classified into three genres. The core rules tell us about the basics of each judgement and how the judgements interact. The type-specific rules tell us how to form the given type, how to create and use the terms of this type and how to compute with them; and type-specific bookkeeping rules which are very schematic and thus not explicitly stated in most texts, but nonetheless required for everything to work smoothly. The core rules are mainly concerned with the  how contexts works, how to use assumptions, 
 
-How exactly do the contexts work? First, there is the empty context, usually denoted by leaving empty space to the left of $\vdash$. For example, $\type{}{\N}$ asserts that $\N$ is a type in the empty context. Second, if we have $\Gamma \vdash A$, (i.e. $A$ is a type in the context $\Gamma$), then we can extend the context $\Gamma$ with a variable of type $A$, written $\Gamma, x : A$, provided that the name $x$ doesn't already occur in $\Gamma$.
+Let's start with rules for contexts. First, there is the empty context, usually denoted by leaving empty space to the left of $\vdash$. For example, $\type{}{\N}$ asserts that $\N$ is a type in the empty context. Second, if we can derive $\Gamma \vdash A$, (i.e. $A$ is a type in the context $\Gamma$), then we can extend the context $\Gamma$ with a variable of type $A$, written $\Gamma, x : A$, provided that the name $x$ doesn't already occur in $\Gamma$. There's also a very important typing rule mainly concerned with contexts, called the assumption rule. It states that if we have a well-formed context $\Gamma$ which contains the assumption $x : A$, then we can derive $\term{\Gamma}{x}{A}$.
 
-The rules that govern type formation are called, unsurprisingly, formation rules. For example, if in a context $\Gamma$ we can form the types $A$ and $B$, written $\type{\Gamma}{A}$ and $\type{\Gamma}{B}$ respectively, then we can form the type of functions from $A$ to $B$, written $\type{\Gamma}{A \to B}$.
+For each type there is a rule that specifies how this type is formed. These rules are called, unsurprisingly, formation rules. For example, if in a context $\Gamma$ we can form the types $A$ and $B$, written $\type{\Gamma}{A}$ and $\type{\Gamma}{B}$ respectively, then we can form the type of functions from $A$ to $B$, written $\type{\Gamma}{A \to B}$. The formation rule for the natural numbers is $\type{\Gamma}{\N}$, i.e. $\N$ is a type in any context.
 
-Rules for creating terms can be divided into two main genres: introduction rules and elimination rules. Introduction rules for a type tell us how to create new terms of this type. For example, there are two introduction rules for natural numbers. The first says that $\term{\Gamma}{0}{\N}$, i.e. that $0$ is a natural number. The second says that given $\term{\Gamma}{n}{\N}$, we have $\term{\Gamma}{\suc{n}}{\N}$, i.e. that when we have a natural number $n$, its successor $\suc{n}$ is also a natural number.
+Rules for terms (i.e. for the typing judgement) can be divided into two main genres: introduction rules and elimination rules. Introduction rules for a type tell us how to create new terms of this type. For example, there are two introduction rules for natural numbers. The first says that $\term{\Gamma}{0}{\N}$, i.e. that $0$ is a natural number. The second says that given $\term{\Gamma}{n}{\N}$, we have $\term{\Gamma}{\suc{n}}{\N}$, i.e. that when we have a natural number $n$, its successor $\suc{n}$ is also a natural number.
 
 Elimination rules for a type, on the other hand, tell us how to use terms of this type to create terms of other types. For example, the simplest elimination rule for $\N$ says that if $\term{\Gamma}{z}{X}$ and $\term{\Gamma}{s}{X \to X}$ and $\term{\Gamma}{n}{\N}$, then $\term{\Gamma}{\recN{z}{s}{n}}{X}$. This rule, alternatively called a recursor, allows us to define functions by recursion on natural numbers, but to do proofs by induction we need a stronger elimination rule. We won't state it here to keep things simple.
 
 \label{convertible}
+
+Now that we know how programs and their specifications (i.e. terms and types) work in our model of computation, it would be nice to learn about computation itself.
 
 The next thing we are interested in is convertibility, which formalizes the notion of computation. Intuitively, two terms are convertible if they evaluate\footnote{We leave the idea of evaluation informal and won't describe it in more detail.} to the same result. For example, we would expect that both $2 + 2$ and $4$ evaluate to $4$, and this is indeed the case, so they are convertible. To state that formally, we write $\termconv{\Gamma}{2 + 2}{4}{\N}$. Rules that govern the behaviour of convertibility, similarly to rules for creating terms, come in two main genres: computation rules and uniqueness rules.
 
@@ -1503,7 +1505,16 @@ It would also be worth exploring how other algorithmic activities described in s
 \bibitem{MLTT2}
     Per Martin-L\"{o}f, \\
     \href{https://archive-pml.github.io/martin-lof/pdfs/Bibliopolis-Book-retypeset-1984.pdf}{\textit{Intuitionistic Type Theory}}, 1984
-    
+
+\bibitem{HoTTBook}
+    The Univalent Foundations Program, \\
+    \href{https://homotopytypetheory.org/book/}{\textit{Homotopy Type Theory: Univalent Foundations of Mathematics}},
+    2013
+
+\bibitem{Overlapping}
+    Jesper Cockx, \\
+    \href{https://www.scriptiebank.be/sites/default/files/webform/scriptie/masterpaper_5.pdf}{\textit{Overlapping and order-independent patterns in type theory}}, 2013
+
 \bibitem{SoftwareFoundations}
     Benjamin C. Pierce, Andrew W. Appel et al., \\
     \href{https://softwarefoundations.cis.upenn.edu/}{\textit{Software Foundations}}, 2019
@@ -1564,11 +1575,6 @@ It would also be worth exploring how other algorithmic activities described in s
     \href{https://existentialtype.wordpress.com/2011/03/15/boolean-blindness/}{\textit{Boolean Blindness}},
     2011, \\
     \wayback{https://web.archive.org/web/20210320001653/https://existentialtype.wordpress.com/2011/03/15/boolean-blindness/}
-
-\bibitem{HoTTBook}
-    The Univalent Foundations Program, \\
-    \href{https://homotopytypetheory.org/book/}{\textit{Homotopy Type Theory: Univalent Foundations of Mathematics}},
-    2013
 
 \bibitem{BBFairbank}
     Jeremy Fairbank,
